styles/Home.module.css
.container {
  padding: 0;
}
.landing {
  min-height: calc(100vh - 100px);
  padding: 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  gap:30px;
}
.header{
z-index:1;
}

.title {
  margin: 30px;
  line-height: 1.15;
  font-size: 4rem;
  font-family: 'Audiowide';
  z-index:1;
  transition:2s;
  text-align: center;
}

.subtitle::selection {
  background: none;
}
.subtitle,
.subtitle::after {
  margin:0 auto;
  z-index:1;
  width: 380px;
  height: 86px;
  font-size: 36px;
  font-family: "Audiowide", cursive;
  background: linear-gradient(45deg, transparent 5%, #F3C041 5%);/* Amarillo #edda9d */
  border: 0;
  color: #550065; /*Negro #1b1b1b */
  letter-spacing: 3px;
  line-height: 88px;
  box-shadow: 6px 0px 0px #00CFB7;  /*Azul #00e6f6 */
  outline: transparent;
  position: relative;
  text-align: center;
  animation: showup 1s;
  animation-fill-mode: forwards;
}

.subtitle::after {
  --slice-0: inset(50% 50% 50% 50%);
  --slice-1: inset(80% -6px 0 0);
  --slice-2: inset(50% -6px 30% 0);
  --slice-3: inset(10% -6px 85% 0);
  --slice-4: inset(40% -6px 43% 0);
  --slice-5: inset(80% -6px 5% 0);

  content: "Connect Wallet";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(
    45deg,
    transparent 3%,
    #00CFB7 3%,
    #00CFB7 5%,
    #F3C041 5%
  );
  text-shadow: -3px -3px 0px #fff, 3px 3px 0px #00CFB7;
  clip-path: var(--slice-0);
}
.subtitle::before {
  width: 380px;
  height: 86px;
  font-size: 36px;
  font-family: "Audiowide", cursive;
  background: linear-gradient(45deg, transparent 5%, #F3C041 5%);
  border: 0;
  color: #1b1b1b;
  letter-spacing: 3px;
  line-height: 88px;
  box-shadow: 6px 0px 0px #00CFB7;
  outline: transparent;
  position: relative;
}

.subtitle::before {
  --slice-0: inset(50% 50% 50% 50%);
  --slice-1: inset(80% -6px 0 0);
  --slice-2: inset(50% -6px 30% 0);
  --slice-3: inset(10% -6px 85% 0);
  --slice-4: inset(40% -6px 43% 0);
  --slice-5: inset(80% -6px 5% 0);

  content: "Connect Wallet";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(
    45deg,
    transparent 3%,
    #00CFB7 3%,
    #00CFB7 5%,
    #F3C041 5%
  );
  text-shadow: -3px -3px 0px #fff, 3px 3px 0px #00CFB7;
  clip-path: var(--slice-0);
}

.subtitle:hover::after {
  animation: 1s glitch;
  animation-timing-function: steps(2, end);
}
.subtitle::before {
  animation: 2s glitch;
  animation-timing-function: steps(2, end);
}

.poolAmountContainer {
  margin-top: -40px;
  display:flex;
  align-items: baseline;
  gap:20px;
  font-family: "Audiowide";
}
.poolAmountContainer h3{
font-size: 28px;
}
.poolAmountContainer span{
font-size: 34px;
color: #550065;
display: flex;
align-items: center;
gap:5px;
}

.button {
  position:absolute;
  top:10px;
  right: 15px;
}

.hero {
  opacity: 8%;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 0 0;
}
@keyframes showup {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 100%;
  }
}

@keyframes glitch {
  0% {
    clip-path: var(--slice-1);
    transform: translate(-20px, -10px);
  }
  10% {
    clip-path: var(--slice-3);
    transform: translate(10px, 10px);
  }
  20% {
    clip-path: var(--slice-1);
    transform: translate(-10px, 10px);
  }
  30% {
    clip-path: var(--slice-3);
    transform: translate(0px, 5px);
  }
  40% {
    clip-path: var(--slice-2);
    transform: translate(-5px, 0px);
  }
  50% {
    clip-path: var(--slice-3);
    transform: translate(5px, 0px);
  }
  60% {
    clip-path: var(--slice-4);
    transform: translate(5px, 10px);
  }
  70% {
    clip-path: var(--slice-2);
    transform: translate(-10px, 10px);
  }
  80% {
    clip-path: var(--slice-5);
    transform: translate(20px, -10px);
  }
  90% {
    clip-path: var(--slice-1);
    transform: translate(-10px, 0px);
  }
  100% {
    clip-path: var(--slice-1);
    transform: translate(0);
  }
}


@media (max-width: 600px) {
  .grid {
    width: 100%;
    flex-direction: column;
  }
  .ball {
    height: auto;
    width: 100vw;
    transform:translate(-50%,-50%)
  }
  .title {
    font-size: 2rem;
  }
  .subtitle,
  .subtitle::after,
  .subtitle::before {
    width:200px;
    height: 60px;
    font-size: 20px;
    line-height: 60px;
  }
  .poolAmountContainer {
   flex-direction: column;
   margin-top: 0;
   gap: 10px;
align-items: center;
  }
  
  .poolAmountContainer span{
gap: 10px;
  }
}

